--- a/.env.example
+++ b/.env.example
@@ -1,3 +1,6 @@
+#App config
+APP_URL=http://localhost:3000
+
 # Clerk config
 NEXT_PUBLIC_CLERK_PUBLISHABLE_KEY=AddClerkPublishableKey
 CLERK_SECRET_KEY=AddClerkSecretKey
